--- a/Project 2/Phase 2/README
+++ b/Project 2/Phase 2/README
@@ -25,7 +25,7 @@ Last, convert all of the characters into lower space, then remove every unnecess
 
 7. Save the file and name it twitteranalyze.py, then run the program.
 
-8. Type any word and send it to the telegram bot, will get the result. I have made a screenshot of it, and save as Result.doc.
+8. Type any word and send it to the telegram bot, will get the result. I have made a screenshot of result, upload it as Result.rtf.
 
 
 
